--- a/main.css
+++ b/main.css
@@ -21,12 +21,12 @@
     background-image: url("images/homePageImage.png");
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
     /*background-size: 100%;
     background-position: fixed;*/
 }
 #title {
     margin: 100px 0px 100px 0px;
-    color: white;
     font-family: cursive;
     font-weight: bold;
     font-size: 150px;
@@ -34,23 +34,98 @@
 }
 #flower-motto {
     margin: 50px 0px 0px 0px;
-    color: white;
     font-family: cursive;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 45px;
     text-align: center;
 }
 #motto-subheading {
     margin: 0px 0px 40px 800px;
-    color: white;
     font-family: cursive;
     font-weight: bold;
     font-style: italic;
     font-size: 20px;
 }
-.dark-purple {
+.motto1-bg {
     background-color: #734B88
 }
-.light-purple {
+.motto2-bg {
     background-color: #967EA3
+}
+.motto {
+    font-family: Impact;
+    text-align: center;
+    margin-bottom: 0px;
+}
+#motto-line1 {
+    font-size: 60px;
+    font-style: italic;
+}
+#motto-line2 {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 15%;
+}
+#motto-line3 {
+    font-size: 40px;
+}
+#motto-line4 {
+    font-size: 50px;
+}
+.link {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #DC5F53;
+    font-size: 17px;
+}
+.link:hover {
+    color: #AFAFB3;
+}
+.break-pt {
+    height: 110px;
+}
+.upcoming-bg {
+    background-color: #D5C5DB;
+}
+.upcoming1-bg {
+    background-color: #7D5692;
+    padding-bottom: 100px;
+}
+#upcoming-programs {
+    font-family: Impact;
+    font-size: 50px;
+    margin-top: 100px;
+    text-align: center;
+}
+.upcoming2-bg {
+    background-color: #967EA3;
+    padding-bottom: 100px;
+}
+#about-programs {
+    margin-top: 100px;
+    margin-right: 10%;
+    margin-left: 10%;
+}
+#see-programs {
+    margin-right: 10%;
+    margin-left: 10%;
+}
+.program1-bg {
+    background-color: #664F70;
+}
+.program2-bg {
+    background-color: #A492AE;
+}
+.program-date {
+    font-family: Impact;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 30px;
+}
+.program-title {
+    margin-top: 40px;
+    margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
 }
