--- a/main.css
+++ b/main.css
@@ -129,3 +129,20 @@
     font-size: 30px;
     font-weight: bold;
 }
+
+/* Contact Us Styles */
+.contact-bg {
+    background-color: #4A4C70;
+}
+#contact-title {
+    margin-top: 30px;
+    margin-left: 20px;
+    font-family: Impact;
+    font-size: 35px;
+}
+#contact-message {
+    margin-bottom: 50px;
+    margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
