--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
     background-color: #734B88;
     opacity: 0.8;
     position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 #navbar-logo {
     width: 125px;
@@ -22,6 +25,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    background-attachment: fixed;
     /*background-size: 100%;
     background-position: fixed;*/
 }
