--- a/main.css
+++ b/main.css
@@ -127,11 +127,15 @@
     margin-top: 30px;
 }
 .program-title {
-    margin-top: 40px;
-    margin-left: 20px;
+    margin: 40px 0px 0px 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     font-weight: bold;
+}
+.program-arrow {
+    width: 30px;
+    margin-left: 90%;
+    margin-bottom: 35px;
 }
 
 /* Contact Us Styles */
