--- a/styles/main.css
+++ b/styles/main.css
@@ -35,3 +35,13 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
+
+/* Links */
+.link {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #DC5F53;
+    font-size: 17px;
+}
+.link:hover {
+    color: #AFAFB3;
+}
