--- a/styles/boardMembersStyles.css
+++ b/styles/boardMembersStyles.css
@@ -1,5 +1,5 @@
-/* Our Mission Page Styles */
-#our-mission {
+/* Board Members Page Styles */
+#board {
     background-image: url("../images/codeBackground.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,15 +24,7 @@
     background-color: #D5C5DB;
 }
 
-/* Program Description Backgrounds */
-.program-bg {
-    background-color: #A492AE;
-}
-.ceremony-bg {
-    background-color: #734B88;
-}
-
-/* About Us */
+/* Board Members */
 .name {
     font-family: Impact;
     font-size: 35px;
