--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,9 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
+.break-pt {
+    height: 110px;
+}
 
 /* Links */
 .link {
