--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,20 @@
 .nav-link:hover {
     color: #AFAFB3;
 }
+#search-btn {
+    color: #DC5F53;
+    border-style: solid;
+    border-color: #DC5F53;
+}
+#search-btn:hover {
+    color: white;
+    border-style: solid;
+    border-color: #DC5F53;
+    background-color: #DC5F53;
+}
+#menu-icon {
+    width: 50px;
+}
 
 /* Contact Us Styles */
 .contact-bg {
@@ -28,12 +42,14 @@
     margin-left: 20px;
     font-family: Impact;
     font-size: 35px;
+    color: white;
 }
 #contact-message {
     margin-bottom: 50px;
     margin-left: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    color: white;
 }
 .break-pt {
     height: 110px;
