--- a/styles/pastProgramsStyles.css
+++ b/styles/pastProgramsStyles.css
@@ -51,4 +51,23 @@
 }
 .ceremony-link {
     text-align: center;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 10px;
+    height: 50px;
+    width: 70%;
+    background-color: #734B88;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: #DC5F53;
+    color: #DC5F53;
+}
+.ceremony-link:hover {
+    background-color: #DC5F53;
+    color: white;
+}
+.group-pic {
+    width: 100%;
+    margin-top: 13%;
 }
