upcoming program style fixes

--- a/styles/upcomingProgramsStyles.css
+++ b/styles/upcomingProgramsStyles.css
@@ -30,6 +30,7 @@
 /* Program Description Backgrounds */
 .program-bg {
     background-color: #A492AE;
+    padding-bottom: 50px;
 }
 .ceremony-bg {
     background-color: #734B88;
