title font change

--- a/styles/homePageStyles.css
+++ b/styles/homePageStyles.css
@@ -39,7 +39,8 @@
     background-color: #967EA3
 }
 .motto {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     text-align: center;
     margin-bottom: 0px;
 }
