--- a/styles/volunteersStyles.css
+++ b/styles/volunteersStyles.css
@@ -7,14 +7,7 @@
     background-attachment: fixed;
 }
 
-/* Title */
-#title {
-    margin: 150px 0px 100px 0px;
-    font-family: Impact;
-    font-size: 50px;
-    text-align: center;
-    color: white;
-}
+/* Titles */
 #sub-title {
     font-family: Impact;
     font-size: 35px;
