--- a/styles/upcomingProgramsStyles.css
+++ b/styles/upcomingProgramsStyles.css
@@ -7,14 +7,8 @@
     background-attachment: fixed;
 }
 
-/* Title */
-#title {
-    margin: 150px 0px 100px 0px;
-    font-family: Impact;
-    font-size: 50px;
-    text-align: center;
-    color: white;
-}
+/* Titles */
+
 .page-subheading {
     font-family: Impact;
     font-size: 35px;
