contact us footer changed to social media

--- a/styles/contactUsStyles.css
+++ b/styles/contactUsStyles.css
@@ -14,7 +14,8 @@
 
 /* Contact Info */
 .subheading {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
     margin: 5% 0px 5px 0px;
     color: #4A4C70;
