--- a/styles/missionStyles.css
+++ b/styles/missionStyles.css
@@ -14,7 +14,8 @@
 
 /* About Us */
 .about-title {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
     color: #4A4C70;
     margin-top: 10%;
