--- a/styles/partnersStyles.css
+++ b/styles/partnersStyles.css
@@ -14,7 +14,8 @@
 
 /* Partners */
 .name {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
     color: #4A4C70;
     margin: 10% 0px 5px 0px;
