--- a/styles/boardMembersStyles.css
+++ b/styles/boardMembersStyles.css
@@ -17,15 +17,16 @@
 
 /* Board Members */
 .name {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
     color: #4A4C70;
     margin: 10% 0px 5px 0px;
 }
 .position {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-family: Optima;
     font-weight: bold;
+    font-size: 25px;
     margin: 0px 0px 0px 0px;
     margin-bottom: 0px;
     color: #4A4C70;
