--- a/styles/main.css
+++ b/styles/main.css
@@ -50,12 +50,13 @@
 #contact-title {
     margin-top: 30px;
     margin-left: 20px;
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
     color: white;
 }
 #contact-message {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     margin-left: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
@@ -63,6 +64,24 @@
 }
 .break-pt {
     height: 110px;
+}
+.social-media {
+    text-align: center;
+    margin-left: 15%;
+    margin-bottom: 25px;
+    height: 50px;
+    width: 25%;
+    background-color: #4A4C70;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: #DC5F53;
+    color: #DC5F53;
+    display: inline;
+}
+.social-media:hover {
+    background-color: #DC5F53;
+    color: white;
 }
 
 /* Links */
@@ -73,4 +92,5 @@
 }
 .link:hover {
     color: #AFAFB3;
+    text-decoration: none;
 }
