--- a/styles/pastProgramsStyles.css
+++ b/styles/pastProgramsStyles.css
@@ -22,13 +22,15 @@
 
 /* Programs */
 .program-title {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 25px;
     color: #4A4C70;
     margin: 10% 10% 5px 10%;
 }
 .program-subheading {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 15px;
     margin: 0px 10% 0px 10%;
     margin-bottom: 0px;
