--- a/styles/upcomingProgramsStyles.css
+++ b/styles/upcomingProgramsStyles.css
@@ -10,10 +10,12 @@
 /* Titles */
 
 .page-subheading {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
     margin: 5% 0px 0px 0px;
     color: #4A4C70;
+    text-align: center;
 }
 
 /* Main Background */
@@ -39,7 +41,8 @@
     border-radius: 8px;
 }
 .dropdown-title {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 30px;
     margin: 2% 2% 2% 2%;
 }
@@ -49,13 +52,15 @@
 
 /* Programs */
 .program-title {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 25px;
     color: #4A4C70;
     margin: 5% 5% 5px 5%;
 }
 .program-subheading {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 17px;
     margin: 0px 5% 0px 5%;
     margin-bottom: 0px;
