--- a/styles/volunteersStyles.css
+++ b/styles/volunteersStyles.css
@@ -9,10 +9,12 @@
 
 /* Titles */
 #sub-title {
-    font-family: Impact;
+    font-family: Optima;
+    font-weight: bold;
     font-size: 35px;
-    margin: 5% 0px 5px 0px;
+    margin: 5% 0px 30px 0px;
     color: #4A4C70;
+    text-align: center;
 }
 
 /* Main Background */
