--- a/styles/volunteersStyles.css
+++ b/styles/volunteersStyles.css
@@ -28,17 +28,17 @@
     font-weight: bold;
     font-size: 20px;
     text-align: center;
-    margin: 10% 0px 0px 0px;
-}
-.subheading {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    text-align: center;
-    margin-top: 5px;
-    margin: 5px 10% 10% 0px;
+    margin: 5% 0px 10% 0px;
 }
 .picture {
     margin-right: 10%;
     margin-left: 10%;
     width: 80%;
+}
+#special-thanks {
+    font-family: cursive;
+    font-size: 25px;
+    margin: 5px 0px 30px 0px;
+    color: #4A4C70;
+    text-align: center;
 }
