--- a/styles/contactUsStyles.css
+++ b/styles/contactUsStyles.css
@@ -26,6 +26,7 @@
     margin-top: 5px;
     margin: 10px 10% 10px 0px;
 }
-#email {
-    font-size: 20px;
+#contact-form {
+    margin-left: auto;
+    margin-right: auto;
 }
