--- a/styles/contactUsStyles.css
+++ b/styles/contactUsStyles.css
@@ -27,6 +27,8 @@
     margin: 10px 10% 10px 0px;
 }
 #contact-form {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+    height: 950px;
 }
