--- a/styles/upcomingProgramsStyles.css
+++ b/styles/upcomingProgramsStyles.css
@@ -36,15 +36,24 @@
 .program-dropdown {
     margin-top: 25px;
     border-style: solid;
-    border-color: black;
+    border-color: #DC5F53;
     border-width: 2px;
     border-radius: 8px;
+    color: #DC5F53;
 }
 .dropdown-title {
     font-family: Optima;
     font-weight: bold;
     font-size: 30px;
     margin: 2% 2% 2% 2%;
+}
+#down-arrow1 {
+    height: 50px;
+    margin-top: 15px;
+}
+.program-dropdown:hover {
+    background-color: #DC5F53;
+    color: white;
 }
 #program1-info, #program2-info, #program3-info {
     display: none;
