--- a/styles/homePageStyles.css
+++ b/styles/homePageStyles.css
@@ -60,6 +60,11 @@
 #motto-line4 {
     font-size: 50px;
 }
+#down-arrow {
+    width: 30%;
+    margin-left: 45%;
+    margin-right: 45%;
+}
 
 /* Upcoming Programs */
 .upcoming-bg {
