--- a/styles/homePageStyles.css
+++ b/styles/homePageStyles.css
@@ -19,18 +19,15 @@
 
 /* Mottos */
 #flower-motto {
-    margin: 50px 0px 0px 0px;
+    margin: 50px 0px 20px 0px;
     font-family: cursive;
     font-weight: bold;
     font-size: 45px;
     text-align: center;
 }
-#motto-subheading {
-    margin: 0px 0px 40px 800px;
-    font-family: cursive;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 20px;
+#flower-divider {
+    margin-bottom: 40px;
+    width: 100%;
 }
 .motto1-bg {
     background-color: #734B88
