--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,11 @@
 .navbar {
     background-color: #734B88;
     opacity: 0.8;
-    position: fixed;
+    position: fixed block;
     width: 100%;
     top: 0;
     left: 0;
+
 }
 #navbar-logo {
     width: 125px;
