--- a/styles/pastProgramsStyles.css
+++ b/styles/pastProgramsStyles.css
@@ -1,6 +1,7 @@
 /* Past Programs Page Styles */
 #past-programs {
-    background-image: url("../images/codeBackground.png");
+    /* background-image: url("../images/codeBackground.png"); */
+    background-image: linear-gradient(to bottom right, purple, #734B88, #D5C5DB);
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
@@ -13,7 +14,7 @@
 }
 
 /* Program Description Backgrounds */
-.program-bg {
+.prog-bg {
     background-color: #A492AE;
 }
 .ceremony-bg {
@@ -21,14 +22,14 @@
 }
 
 /* Programs */
-.program-title {
+.prog-title {
     font-family: Optima;
     font-weight: bold;
     font-size: 25px;
     color: #4A4C70;
     margin: 10% 10% 5px 10%;
 }
-.program-subheading {
+.prog-subheading {
     font-family: Optima;
     font-weight: bold;
     font-size: 15px;
@@ -36,7 +37,7 @@
     margin-bottom: 0px;
     color: #4A4C70;
 }
-.program-description {
+.prog-description {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
     margin-top: 5px;
@@ -63,4 +64,65 @@
 .group-pic {
     width: 100%;
     margin-top: 13%;
+}
+
+.program-box {
+    background-color: #7D5692;
+    background-color: #7D5692;
+    border-radius: 30px;
+    padding: 30px 40px 30px 40px;
+    border: solid 3px white;
+    margin: 10px;
+}
+.program-title {
+    font-family: Optima;
+    font-weight: bold;
+    font-size: 25px;
+    color: white;
+    margin: 10px 10px 10px 10px;
+}
+.program-subheading {
+    font-family: Optima;
+    font-weight: bold;
+    font-size: 15px;
+    margin: 0px 10px 0px 10px;
+    margin-bottom: 0px;
+    color: white;
+}
+.program-description {
+    font-family: Optima;
+    font-size: 17px;
+    margin-top: 5px;
+    margin: 5px 10px 10px 10px;
+    color: white;
+}
+.ceremony-btn {
+    text-align: center;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 10px;
+    height: 50px;
+    width: 70%;
+    background-color: #DC5F53;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: #DC5F53;
+    color: white;
+}
+.ceremony-btn:hover {
+    border-color: white;
+}
+.pic {
+    width: 100%;
+}
+#link-btn {
+    margin: 10px auto;
+    color: white;
+    background-color: #DC5F53;
+    border-style: solid;
+    border-color: #DC5F53;
+}
+#link-btn:hover {
+    border: solid 2px white;
 }
