--- a/styles/contactUsStyles.css
+++ b/styles/contactUsStyles.css
@@ -1,6 +1,7 @@
 /* Contact Us Page Styles */
 #contact {
-    background-image: url("../images/codeBackground.png");
+    /* background-image: url("../images/codeBackground.png"); */
+    background-image: linear-gradient(to bottom right, purple, #734B88, #D5C5DB);
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
@@ -26,9 +27,26 @@
     margin-top: 5px;
     margin: 10px 10% 10px 0px;
 }
-#contact-form {
+#page-contact-form {
     margin-left: 10%;
     margin-right: 10%;
     width: 80%;
     height: 950px;
+}
+
+.page-subheading {
+    font-family: Optima;
+    font-weight: bold;
+    font-size: 25px;
+    margin: 20px 0px 0px 0px;
+    color: white;
+    text-align: center;
+}
+#contact-form {
+    background-color: #7D5692;
+    border-radius: 30px;
+    border: solid 3px white;
+    padding: 30px 0px;
+    width: 100%;
+    height: 1000px;
 }
