--- a/styles/volunteersStyles.css
+++ b/styles/volunteersStyles.css
@@ -1,6 +1,6 @@
 /* Volunteers Page Styles */
 #volunteers {
-    background-image: url("../images/codeBackground.png");
+    background-image: linear-gradient(to bottom right, purple, #734B88, #D5C5DB);
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
@@ -36,9 +36,45 @@
     width: 80%;
 }
 #special-thanks {
-    font-family: cursive;
+    font-family: Optima;
     font-size: 25px;
-    margin: 5px 0px 30px 0px;
-    color: #4A4C70;
+    margin: 5px 0px 5px 0px;
+    color: white;
     text-align: center;
+}
+.picture-box {
+    position: relative;
+    height: auto;
+}
+.box {
+    background-color: #7D5692;
+    border-radius: 30px;
+    padding: 30px 40px 30px 40px;
+    border: solid 3px white;
+    color: white;
+    /* margin-bottom: 25px; */
+}
+.box-title {
+    font-family: Optima;
+    font-weight: bold;
+    font-size: 40px;
+}
+.box-subheading {
+    font-family: Optima;
+    font-weight: bold;
+    font-size: 25px;
+}
+.box-paragraph {
+    font-family: Optima;
+    font-size: 17px;
+}
+#link-btn {
+    margin: 10px auto;
+    color: white;
+    background-color: #DC5F53;
+    border-style: solid;
+    border-color: #DC5F53;
+}
+#link-btn:hover {
+    border: solid 2px white;
 }
